--- a/src/index.html
+++ b/src/index.html
@@ -2,11 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>NgBase</title>
+  <meta property=”og:title” content=”GoMama” />
+  <meta property="og:type" content="website"/>
+  <meta name="og_site_name" property="og:site_name" content="ng-base"/>
+  <meta name="og_url" property="og:url" content=""/>
+  <meta property=”og:description” content=”Discover fashion and lifestyle products with new video experience commerce” />
+  <meta property=”og:image” content=”https://cmn-platform-assets.s3.ap-south-1.amazonaws.com/rectangular.png” />
+  <title>GoMama</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="favicon.ico">  <!--===============================================================================================-->
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600" rel="stylesheet">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css">
+  <!--===============================================================================================-->
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeicons/primeicons.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
+  <link rel="stylesheet" type="text/css" href="/node_modules/primeng/resources/primeng.min.css" />
+  <!--===============================================================================================-->
+  <script src="node_modules/chart.js/src/chart.js"></script>
+  <!--===============================================================================================-->
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+
 </head>
+<style>
+  body {
+    background-color: #F5F6FC;
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 14px;
+    color: #333;
+  }
+</style>
 <body>
   <app-root></app-root>
 </body>
